--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -152,6 +152,8 @@
     <string name="add_comment">Add comment...</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
-
+    <string name="Following">Following</string>
+    <string name="Follow">Follow</string>
+    <string name="create_acount">Create a profile  follow other accounts , make your own video and more </string>
 
 </resources>
