--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -155,5 +155,8 @@
     <string name="Following">Following</string>
     <string name="Follow">Follow</string>
     <string name="create_acount">Create a profile  follow other accounts , make your own video and more </string>
+    <string name="enter_otp">Enter 6-digit code</string>
+    <string name="your_code">your code was send to</string>
+    <string name="resend_code">Resend code</string>
 
 </resources>
